# network-ml-library

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  vcpkg.json
.github/workflows/: ci.yml
Network ML/: Chat.cpp  File.cpp  Requests.cpp  networkml.h
cmake/: NetworkMLConfig.cmake.in
include/: networkml.h
src/: File.cpp  Requests.cpp  domain.cpp  getReq.cpp  postJsonReq.cpp  readFile.cpp
test/: main.cpp
test/getReq()/: main.cpp
test/readFile()/: main.cpp
tools/: make-release-lib.ps1
tools/tests/: CMakeLists.txt  main.cpp
